# AndroidAudioRecordDemo

./: README.md  README_zh.md  settings.gradle  signature.jks
app/: build.gradle
app/libs/arm64-v8a/include/: config.h
app/libs/armeabi-v7a/include/: config.h
app/src/androidTest/java/me/rjy/oboe/record/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  data_writer.cpp  data_writer.h  demo_jni.cpp  logging.h  oboe_player.cpp  oboe_player.h  oboe_player_jni.cpp  oboe_recorder.cpp  oboe_recorder.h  ring_buffer.cpp  ring_buffer.h  simple_ring_buffer.cpp  simple_ring_buffer.h  thread_safe_ring_buffer.cpp  thread_safe_ring_buffer.h
app/src/main/cpp/latency/: config.h  latency_tester.cpp
app/src/main/cpp/latency/audio/: AudioRingBuffer.h  RingBuffer.cpp  RingBuffer.h
app/src/main/cpp/latency/ffmpeg/: AudioTranscode.cpp  AudioTranscode.h
app/src/main/java/me/rjy/oboe/record/demo/: AmplitudeCalculator.kt  App.kt  AudioDecoder.kt  AudioPlayerActivity.kt  AudioRecorderActivity.kt  LatencyEvents.kt  LatencyTesterActivity.kt  LauncherActivity.kt  LocalPlayerActivity.kt  MainActivity.kt  OboePlayer.kt  PreferenceManager.kt  RecorderViewModel.kt  VideoPlayerActivity.kt  WaveformBuffer.kt
app/src/main/java/me/rjy/oboe/record/demo/ui/: WaveformPlayView.kt  WaveformView.kt
app/src/main/java/me/rjy/oboe/record/demo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/me/rjy/oboe/record/demo/: ExampleUnitTest.kt
docs/: OBOE_BUFFER_EXPLANATION.md  README.txt
gradle/wrapper/: gradle-wrapper.properties
